improvement: show group labels in lms-ui-multiselect and lms-ui-advanced-select ui controls - corresponding data-show-group-labels attribute and show-group-labels class control if group labels are visible (small visual fix)

--- a/css/less/advanced-select.less
+++ b/css/less/advanced-select.less
@@ -110,6 +110,9 @@
         background-position-y: -2px;
       }
     }
+    span {
+      white-space: wrap;
+    }
   }
   &.alert,
   &.lms-ui-error,
